--- a/U2U.AspNetCore.Mvc.NameOf/U2U.AspNetCore.Mvc.NameOf.csproj
+++ b/U2U.AspNetCore.Mvc.NameOf/U2U.AspNetCore.Mvc.NameOf.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp1.0</TargetFramework>
     <OutputType>library</OutputType>
+    <VersionPrefix>1.1.0</VersionPrefix>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="**\*.cs" />
